--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <h1>Powering a Sustainable Future with Solar Energy</h1>
     <p>Discover the benefits of solar energy and how it can transform your home or business. Join us in creating a greener, more sustainable world.</p>
     <button class="requestquote" href="aftersignup.html" >Request Quote</button>
+    <img src="assets/solar.jpg" class="logovideo">
   </div>
     </section>
      <div class="trusted">
@@ -42,7 +43,7 @@
         <section class="section2">
             <div>
                 <h2>Need Help Sourcing Solar Products? <br> Our Experts!</h2>
-                <p>With over 16 years of expertise in solar product manufacturing, 
+                <p>With over 10 years of expertise in solar product manufacturing, 
                    <strong>CARENERGY SOLAR </strong> is committed to helping 300+ agents succeed in their solar business career. 
                     We not only deliver premium-quality solar products, but also design one stop solar solutions with clients electricity consumption needs. Guaranteed after-sales service.</p>
             </div>
@@ -51,6 +52,61 @@
         </div>
         </section>
    
+
+
+
+
+
+        <section class="pricing">
+  <div class="card">
+    <div class="icon">📅</div>
+    <h2>Pay Small Small</h2>
+    <p class="subtitle">Flexible installment payments</p>
+    <ul>
+      <li>✔ Pay initial deposit of <strong>30%</strong> to receive your system</li>
+      <li>✔ Spread remaining payments over 3–24 months</li>
+      <li>✔ <strong>Interest rates apply</strong> – details provided by admin upon approval</li>
+      <li>✔ Flexible payment schedule based on your income</li>
+      <li>✔ Payment reminders and easy tracking</li>
+    </ul>
+    <button>Choose This Option</button>
+  </div>
+
+  <div class="card">
+    <div class="icon">🚚</div>
+    <h2>Pay on Delivery</h2>
+    <p class="subtitle">No advance payment needed</p>
+    <ul>
+      <li>✔ No upfront payment required</li>
+      <li>✔ Inspect your system before paying</li>
+      <li>✔ Available within Lagos and Abuja</li>
+      <li>✔ Pay cash or transfer upon delivery</li>
+      <li>✔ Same day installation available</li>
+    </ul>
+    <button>Choose This Option</button>
+  </div>
+
+  <div class="card">
+    <div class="icon">%</div>
+    <h2>Pay Outright</h2>
+    <p class="subtitle">Full payment with benefits</p>
+    <ul>
+      <li>✔ 5% discount on total package price</li>
+      <li>✔ Priority delivery and installation</li>
+      <li>✔ Free system monitoring for 6 months</li>
+      <li>✔ Extended warranty options available</li>
+      <li>✔ Bank transfer or online payment</li>
+    </ul>
+    <button>Choose This Option</button>
+  </div>
+</section>
+
+
+
+
+
+
+
 
 
 
