--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logoandname">
-            <img class="logo" src = "assetS/solar.jpg" alt="logo">
+            <img class="logo" src = "assets/solar.jpg" alt="logo">
             <p>CARENERGY</p>         
         </div>
         <div class="toplinks">
