media resolved, home page now in perfect condition

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="solar.css">
+    <link rel="stylesheet" href="newsolar.css">
 </head>
 <body>
     <header>
@@ -33,8 +33,9 @@
     <h1>Powering a Sustainable Future with Solar Energy</h1>
     <p>Discover the benefits of solar energy and how it can transform your home or business. Join us in creating a greener, more sustainable world.</p>
     <button class="requestquote" href="aftersignup.html" >Request Quote</button>
-    <img src="assets/solar.jpg" class="logovideo">
   </div>
+      <img src="assets/solar.jpg" class="logovideo">
+
     </section>
      <div class="trusted">
         <h2>    Your Trusted Solar Instalation Solution</h2>
@@ -149,13 +150,19 @@
 </section>
 <section class="section4">
     <h1>Some of our clients</h1>
-    <img src="assets/Screenshot 2025-09-16 204044.png">
+    <div class="clients">
+    <img src="assets/1.png">
+        <img src="assets/2.png">
+    <img src="assets/3.png">
+    <img src="assets/4.png">
+    <img src="assets/5.png">
+    </div>
 </section>
 <footer>
     <section class="footersection">
     <div class="firstfooter">
     <div class="logoandname">
-            <img class="logo" src = "assetS/solar.jpg" alt="logo">
+            <img class="logo" src = "assets/solar.jpg" alt="logo">
 <p style="color: white;">CARENERGY</p>
         </div>
         <div>
