--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link rel="stylesheet" href="newsolar.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -37,7 +38,7 @@
       <img src="assets/solar.jpg" class="logovideo">
 
     </section>
-     <div class="trusted">
+     <div class="trusted reveal">
         <h2>    Your Trusted Solar Instalation Solution</h2>
         <p>At Carenergy, our mission is to provide innovative and sustainable solar energy solutions that empower individuals and businesses to reduce their carbon footprint while enjoying reliable and cost-effective power. We are committed to excellence, customer satisfaction, and contributing to a greener future for generations to come.</p>
     </div>
@@ -58,9 +59,9 @@
 
 
         <div class="trusted">
-            <h1> Payment Plans</h1>
+            <h1> Payment Plans </h1>
         </div>
-        <section class="pricing">
+        <section class="pricing reveal">
   <div class="card">
     <div class="icon">📅</div>
     <h2>Pay Small Small</h2>
@@ -72,7 +73,7 @@
       <li>✔ Flexible payment schedule based on your income</li>
       <li>✔ Payment reminders and easy tracking</li>
     </ul>
-    <button onclick="window.location.href='contactus.html'" >Choose This Option</button>
+    <button onclick="window.location.href='contactus.html#contactsection'" >Choose This Option</button>
   </div>
 
   <div class="card">
@@ -117,7 +118,7 @@
     <h1>Why Choose CARENERGY Solar</h1>
 </div>
 
-<section class="section3">
+<section class="section3 reveal">
     
     <div class="section31">
         <h2>1 Year Free Maintenance</h2>
