--- a/ourservices.html
+++ b/ourservices.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="newsolar.css">
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body style="background-color: rgb(236, 230, 222);">
     <header>
         <div class="logoandname">
             <img class="logo" src = "assets/solar.jpg" alt="logo">
