--- a/aboutus.html
+++ b/aboutus.html
@@ -29,6 +29,8 @@
 
     <section class="topimg">
        <div class="experiencebadge">
+                    <img class="logo" src = "assets/solar.jpg" alt="logo">
+
       <h1>15</h1>
       <p style="color: white; font-weight: bold;">Years of<br>Experience</p>
         </div>
@@ -40,7 +42,7 @@
 <section class="whc-section">
   <!-- Left: Image -->
   <div class="whc-image">
-    <img src="assets/solarp.jpg" alt="carenergy at work">
+    <img style="border-radius: 1500px;  box-shadow: 0 14px 30px rgba(79, 51, 235, 0.28);" src="assets/solarp2.jpg" alt="carenergy at work">
   </div>
 
   <!-- Right: Content -->
